@startuml app_ai
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "Users" as USERS {
    id : bigint
    --
    company_id : bigint<<FK>>
    department_id : bigint<<FK>>
    client_id : bigint<<FK>>
    job_status : string(在職 or 就活中)
    name : string(ユーザー名) null: false
    email : string null: false
    password : string null: false
    password_confirmation : string null: false

    etc..deviseで必要なカラム
}

entity "Posts(生成した文章)" as POSTS {
    id : bigint
    --
    user_id : bigint<<FK>>
    text : text(生成したテキスト) null: false
    word_count : int(文字数)
    sns : string(slack or mail or blog) null: false
}

entity "post_moods" as POSTMOODS {
    id : bigint
    --
    post_id : bigint<<FK>>
    mood_id : bigint<<FK>>
}

entity "Moods(メッセージの雰囲気)" as MOODS {
    id : bigint
    --
    name : bigint(送る雰囲気) null: false
}

entity "Employees(自社社員)" as EMPLOYEES {
    id : bigint
    --
    company_id : bigintt<<FK>>
    department_id : bigintt<<FK>>
    name : string(社員名) null: false
}

entity "Departments(部署)" as DEPARTMENTS {
    id : bigint
    --
    name : string(部署名) null: false
}

entity "Companies(会社)" as COMPANIES {
    id : bigint
    --
    name : string(会社名) null: false
    type : string(自社 or 取引先) null: false
}

entity "Positions(役職)" as POSITIONS {
    id : bigint
    --
    name : string(役職名) null: false
}

entity "Clients(取引先の担当者名)" as CLIENTS {
    id : bigint
    --
    company_id : bigintt<<FK>>
    department_id : bigintt<<FK>>
    name : string(担当者名) null: false
}

USERS |o--o{ COMPANIES
USERS |o--o| DEPARTMENTS
USERS |o--o| POSITIONS
USERS |o--o{ POSTS
USERS |o--o{ CLIENTS

COMPANIES |o--o{ EMPLOYEES
EMPLOYEES }o--o| DEPARTMENTS
EMPLOYEES }o--o| POSITIONS

CLIENTS }o--o| COMPANIES
CLIENTS }o--o| DEPARTMENTS

POSTS |o--o{ POSTMOODS
MOODS |o--o{ POSTMOODS

@enduml
